# micro_hap

./: Cargo.toml  README.md
example_pico_2w/: Cargo.toml  Makefile  README.md
example_pico_2w/.cargo/: config.toml
example_pico_2w/src/: defmt_serial.rs  hap.rs  hap_temp_sensor.rs  lib.rs  main.rs  temperature_sensor.rs
example_std/: Cargo.toml
example_std/examples/: example_lightbulb.rs  example_lightbulb_builder.rs  example_mutually_exclusive_bulb.rs  example_mutually_exclusive_bulb_builder.rs  example_rgb.rs  example_temp_sensor.rs  example_temp_sensor_builder.rs  srp_generator.rs
example_std/src/: lib.rs  main.rs  temperature_sensor.rs
micro_hap/: Cargo.toml
micro_hap/src/: adv.rs  characteristic.rs  fmt.rs  lib.rs  pair_pairing.rs  pair_verify.rs  pairing.rs  tlv.rs
micro_hap/src/ble/: advertise_manager.rs  advertisement.rs  broadcast.rs  mod.rs  pdu.rs  services.rs  sig.rs  test.rs
micro_hap/src/ble/services/: accessory_information.rs  humidity_sensor.rs  lightbulb.rs  mod.rs  pairing.rs  protocol_information.rs  temperature_sensor.rs
micro_hap/src/crypto/: aead.rs  mod.rs  srp.rs
micro_hap/src/pairing/: mod.rs  pair_pairing.rs  pair_setup.rs  pair_verify.rs  serde_support.rs  session_cache.rs
