[package]
name = "example_std"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"


[dependencies]

# Main dep ;)
micro_hap = {path="../micro_hap/", features=["log"]}

# Parts of embassy that are necessary.
embassy-sync = { version = "0.7.2" }
embassy-futures = "0.1.1"
embassy-time = "0.5"


# Helpers to run main.
zerocopy = { version = "0.8.26", features = ["derive"] }
static_cell = "2.1"


qrcode = { version = "0.14.1", default-features = false  }

# Bluetooth stack and deps to use the linux bt-hci interface.
trouble-host = { features = [
    "peripheral",
    "default-packet-pool-mtu-1024",
    "log",
    ], git = "https://github.com/embassy-rs/trouble", rev = "26ec6794d0a976dd91cd694b631c72b16ddf651b" }
bt-hci-linux = { git = "https://github.com/embassy-rs/trouble", rev = "26ec6794d0a976dd91cd694b631c72b16ddf651b" }
bt-hci = { version = "0.4", default-features = false, features=["log"] }
tokio = { version = "1", features = [
    "io-util",
    "net",
    "rt",
    "macros",
    "signal",
    "sync",
    "time",
] }

# Logging
env_logger = "0.11"
log = { version = "0.4" }

# Random numbers.
rand = "0.9.2"
rand_core = { version = "0.9.1", features = ["std", "os_rng"] }

# To parse the commandline arguments.
clap = { version = "4.5.51", features = ["derive"] }

# To write the state to the disk.
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.100"
[features]
